更新报告模版

--- a/bin/06_report/demo_template.html
+++ b/bin/06_report/demo_template.html
@@ -613,10 +613,10 @@ pre {
                                 </li>
 
                                 <li>
-                                    <a href="#g_2">4.2 Nanopore文库构建</a>
+                                    <a href="#g_2">4.2 纳米孔测序文库构建</a>
                                 </li>
                                 <li>
-                                    <a href="#g_3">4.3 Nanopore测序</a>
+                                    <a href="#g_3">4.3 纳米孔测序</a>
                                 </li>
                                 
                             </ul>
@@ -782,11 +782,11 @@ pre {
                         <p>
                             使用康为世纪细菌基因组DNA提取试剂盒进行提取，用琼脂糖凝胶电泳检测基因组DNA完整性，Nanodrop检测DNA纯度，使用Qubit检测DNA浓度，评估样本质量是否适合进行后续实验。
                         </p>
-                        <h4 id="g_2">4.2 Nanopore文库构建</h4>
+                        <h4 id="g_2">4.2 纳米孔测序文库构建</h4>
                         <p>
                             提取好的基因组DNA进行纯化后，直接连接barcode及测序接头完成测序文库构建。
                         </p>
-                        <h4 id="g_3">4.3 Nanopore测序</h4>
+                        <h4 id="g_3">4.3 纳米孔测序</h4>
                         <p>
                             将构建好的测序文库加载到测序芯片上，使用Oxford Nanopore Technologies纳米孔测序平台进行测序。其测序核心原理是基于生物蛋白形成的纳米级孔道：当带负电的核酸链在电场驱动下穿过孔道时，不同碱基（A/T/C/G）或化学修饰（如甲基化）会因空间构型及带电特性的差异，对穿过纳米孔的离子流产生特异性阻碍，形成独特的电流信号波动。这些实时记录的电流变化经机器学习算法解码后，即可转化为对应的核酸序列。测序芯片上有上千纳米孔，DNA分子加载到芯片上后，即可被纳米孔捕获，在解旋酶的作用下匀速通过纳米孔。
                         </p>
