报告模版修改，添加样本ID信息在目录

--- a/bin/06_report/demo_template.html
+++ b/bin/06_report/demo_template.html
@@ -559,6 +559,12 @@ pre {
                 <div class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix" role="complementary">
                     <ul class="nav bs-docs-sidenav text-right">
                         <li>
+                            <a >
+                                {{ sample_id }}
+                            </a>
+                        </li>
+
+                        <li>
                             <a href="#a">
                                 1 项目信息
                             </a>
